egress/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-rest-app
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: rest-app
