egress/VirtualService_host-only.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-rest-through-egress-gateway
spec:
  hosts:
  - minishift.host
  gateways:
  - istio-egressgateway
  http:
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: minishift.host
        port:
          number: 80
      weight: 100
