egress/desable_mTLS_for_one_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "api-server"
spec:
 host: "rest-app-a.tutorial.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
